--- a/examples/node/express/package.json
+++ b/examples/node/express/package.json
@@ -13,12 +13,10 @@
     "test": "vitest"
   },
   "dependencies": {
-    "ajv": "^8.12.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "openai": "^4.24.0",
-    "zod": "^3.22.4"
+    "openai": "^4.24.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
